--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,21 +10,44 @@
     <height>803</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1370</width>
+    <height>803</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>580</y>
-      <width>151</width>
-      <height>51</height>
+      <x>90</x>
+      <y>180</y>
+      <width>381</width>
+      <height>451</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>Show chart!</string>
+     <string>Показать графики</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -125,12 +148,17 @@
      <rect>
       <x>560</x>
       <y>580</y>
-      <width>151</width>
-      <height>51</height>
+      <width>231</width>
+      <height>101</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>Exit</string>
+     <string>Выход</string>
     </property>
    </widget>
   </widget>
