--- a/graph_window.ui
+++ b/graph_window.ui
@@ -27,7 +27,7 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>270</x>
      <y>850</y>
      <width>83</width>
      <height>24</height>
@@ -35,6 +35,19 @@
    </property>
    <property name="text">
     <string>Ok</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>850</y>
+     <width>111</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Сохранить</string>
    </property>
   </widget>
  </widget>
